--- a/src/main/resources/org/example/home.fxml
+++ b/src/main/resources/org/example/home.fxml
@@ -5,13 +5,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.homeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: rgb(85, 94, 68);" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.homeController">
 
    <children>
-      <Label fx:id="login_txt" alignment="CENTER" layoutX="144.0" layoutY="50.0" prefHeight="18.0" prefWidth="311.0" style="-fx-background-color: rgb(84, 138, 247);" text="LOG-IN" textFill="WHITE" AnchorPane.bottomAnchor="298.8" AnchorPane.leftAnchor="144.0" AnchorPane.rightAnchor="144.8" AnchorPane.topAnchor="50.0">
+      <Label fx:id="login_txt" alignment="CENTER" layoutX="105.0" layoutY="50.0" prefHeight="51.0" prefWidth="611.0" style="-fx-background-color: white;" text="LOGIN" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="109.0">
          <font>
             <Font size="35.0" />
          </font>
@@ -19,31 +21,57 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </Label>
-      <AnchorPane id="btn_login" layoutX="144.0" layoutY="121.0" prefHeight="226.0" prefWidth="311.0" style="-fx-background-color: white;">
+      <AnchorPane id="btn_login" layoutX="413.0" layoutY="192.0" prefHeight="246.0" prefWidth="342.0" style="-fx-background-color: rgb(239, 184, 42);" AnchorPane.leftAnchor="413.0" AnchorPane.rightAnchor="70.0">
          <children>
-            <PasswordField fx:id="psswdtxt" layoutX="125.0" layoutY="113.0" promptText="Password">
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor>
-            </PasswordField>
-            <TextField fx:id="usertxt" layoutX="125.0" layoutY="58.0" promptText="Name" />
-            <Button id="btn_login" fx:id="btn_login" layoutX="126.0" layoutY="185.0" mnemonicParsing="false" onAction="#btnLogin" prefHeight="26.0" prefWidth="56.0" style="-fx-background-color: rgb(84, 138, 247);" text="Login" textFill="WHITE">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Label layoutX="55.0" layoutY="62.0" text="USER">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <Label layoutX="37.0" layoutY="117.0" text="PASSWORD" />
             <Label fx:id="errortxt" layoutX="90.0" layoutY="148.0" textFill="RED">
                <font>
                   <Font size="19.0" />
                </font>
             </Label>
+            <Label layoutX="57.0" layoutY="55.0" text="USER">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="114.0" prefHeight="28.0" prefWidth="102.0" text="PASSWORD">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Button id="btn_login" fx:id="btn_login" layoutX="117.0" layoutY="192.0" mnemonicParsing="false" onAction="#btnLogin" prefHeight="26.0" prefWidth="83.0" style="-fx-background-color: rgb(76, 74, 69);" text="Login" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <PasswordField fx:id="psswdtxt" layoutX="142.0" layoutY="115.0" promptText="Password">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor>
+            </PasswordField>
+            <TextField fx:id="usertxt" layoutX="141.0" layoutY="61.0" prefHeight="26.0" prefWidth="150.0" promptText="Name" />
          </children>
       </AnchorPane>
+      <ImageView fitHeight="39.0" fitWidth="39.0" layoutX="153.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="408.0">
+         <image>
+            <Image url="@foto/sonic.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="190.0" fitWidth="223.0" layoutX="128.0" layoutY="227.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@foto/Logo.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="login_txt1" layoutX="413.0" layoutY="458.0" prefHeight="46.0" prefWidth="317.0" style="-fx-background-color: white;" text="Need a acount? ">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
+      </Label>
+      <Button id="btn_login" fx:id="btn_reg" layoutX="632.0" layoutY="468.0" mnemonicParsing="false" onAction="#btnReg" prefHeight="26.0" prefWidth="83.0" style="-fx-background-color: rgb(76, 74, 69);" text="Register" textFill="WHITE">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
