--- a/src/main/resources/org/example/home.fxml
+++ b/src/main/resources/org/example/home.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: rgb(85, 94, 68);" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.homeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: rgb(85, 94, 68);" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.homeController">
 
    <children>
       <Label fx:id="login_txt" alignment="CENTER" layoutX="105.0" layoutY="50.0" prefHeight="51.0" prefWidth="611.0" style="-fx-background-color: white;" text="Main Menu" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="109.0">
