--- a/src/main/resources/org/example/Register.fxml
+++ b/src/main/resources/org/example/Register.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -32,25 +33,24 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <TextField fx:id="username" layoutX="275.0" layoutY="61.0" />
+            <TextField fx:id="username" layoutX="275.0" layoutY="61.0" promptText="username" />
             <Label alignment="CENTER" layoutX="155.0" layoutY="60.0" prefHeight="28.0" prefWidth="120.0" text="USERNAME: ">
                <font>
                   <Font size="17.0" />
                </font>
             </Label>
-            <TextField fx:id="passwd" layoutX="275.0" layoutY="110.0" />
             <Label alignment="CENTER" layoutX="155.0" layoutY="109.0" prefHeight="28.0" prefWidth="120.0" text="PASSWORD: ">
                <font>
                   <Font size="17.0" />
                </font>
             </Label>
-            <TextField fx:id="mail" layoutX="275.0" layoutY="159.0" />
+            <TextField fx:id="mail" layoutX="275.0" layoutY="159.0" promptText="mail" />
             <Label alignment="CENTER" layoutX="155.0" layoutY="158.0" prefHeight="28.0" prefWidth="120.0" text="MAIL: ">
                <font>
                   <Font size="17.0" />
                </font>
             </Label>
-            <TextField fx:id="DNI" layoutX="275.0" layoutY="209.0" />
+            <TextField fx:id="DNI" layoutX="275.0" layoutY="209.0" promptText="DNI" />
             <Label alignment="CENTER" layoutX="155.0" layoutY="208.0" prefHeight="28.0" prefWidth="120.0" text="DNI: ">
                <font>
                   <Font size="17.0" />
@@ -64,6 +64,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </CheckBox>
+            <PasswordField fx:id="passwd" layoutX="276.0" layoutY="111.0" promptText="password" />
          </children>
       </AnchorPane>
       <Button fx:id="btn_main" layoutX="595.0" layoutY="69.0" mnemonicParsing="false" onAction="#goBack" prefHeight="26.0" prefWidth="82.0" style="-fx-background-color: rgb(76, 74, 69);" text="Go Back" textFill="WHITE">
