--- a/src/main/resources/org/example/admin.fxml
+++ b/src/main/resources/org/example/admin.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -23,13 +21,6 @@
       <Button fx:id="addproducts" layoutX="32.0" layoutY="428.0" mnemonicParsing="false" onAction="#add" prefHeight="51.0" prefWidth="195.0" style="-fx-background-color: rgb(239, 184, 42);" text="Add Products" textFill="WHITE">
          <font>
             <Font size="25.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor></Button>
-      <Button fx:id="searchP" layoutX="574.0" layoutY="503.0" mnemonicParsing="false" onAction="#search" prefHeight="51.0" prefWidth="195.0" style="-fx-background-color: rgb(239, 184, 42);" text="Search Products" textFill="WHITE">
-         <font>
-            <Font size="20.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -53,20 +44,21 @@
             <Font size="43.0" />
          </font>
       </Label>
-      <TableView fx:id="tableProducts" layoutX="181.0" layoutY="135.0" prefHeight="226.0" prefWidth="456.0">
-        <columns>
-          <TableColumn fx:id="colid" prefWidth="75.0" text="ID" />
-          <TableColumn fx:id="colN" prefWidth="75.0" text="Nombre" />
-            <TableColumn fx:id="colD" prefWidth="75.0" text="Descripcion" />
-            <TableColumn fx:id="colP" prefWidth="75.0" text="Precio" />
-            <TableColumn fx:id="colS" prefWidth="75.0" text="Stock" />
-            <TableColumn fx:id="colIDA" prefWidth="75.0" text="id_Admin" />
-        </columns>
-      </TableView>
-      <ImageView fitHeight="51.0" fitWidth="76.0" layoutX="122.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@foto/usertest.png" />
-         </image>
-      </ImageView>
+      <TableView fx:id="tableProducts" layoutX="227.0" layoutY="133.0" prefHeight="226.0" prefWidth="367.0">
+         <columns>
+            <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" />
+            <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="descriptionColumn" prefWidth="75.0" text="Description" />
+            <TableColumn fx:id="stockColumn" prefWidth="75.0" text="Stock" />
+            <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
+         </columns></TableView>
+      <Button fx:id="modAdmin" layoutX="574.0" layoutY="510.0" mnemonicParsing="false" onAction="#modifyAdmin" prefHeight="51.0" prefWidth="195.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify Admin" textFill="#151515">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
