--- a/src/main/resources/org/example/admin.fxml
+++ b/src/main/resources/org/example/admin.fxml
@@ -25,7 +25,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="modP" layoutX="32.0" layoutY="510.0" mnemonicParsing="false" onAction="#modify" prefHeight="51.0" prefWidth="195.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify Products" textFill="WHITE">
+      <Button fx:id="modP" layoutX="32.0" layoutY="510.0" mnemonicParsing="false" onAction="#modifyProduct" prefHeight="51.0" prefWidth="195.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify Products" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
