--- a/src/main/resources/org/example/UsersLogin.fxml
+++ b/src/main/resources/org/example/UsersLogin.fxml
@@ -21,33 +21,46 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </Label>
-      <AnchorPane id="btn_login" layoutX="413.0" layoutY="192.0" prefHeight="246.0" prefWidth="342.0" style="-fx-background-color: rgb(239, 184, 42);" AnchorPane.leftAnchor="413.0" AnchorPane.rightAnchor="70.0">
+      <AnchorPane id="btn_login" layoutX="413.0" layoutY="192.0" prefHeight="262.0" prefWidth="350.0" style="-fx-background-color: rgb(239, 184, 42);" AnchorPane.leftAnchor="413.0" AnchorPane.rightAnchor="37.0">
          <children>
             <Label fx:id="errortxt" layoutX="90.0" layoutY="148.0" textFill="RED">
                <font>
                   <Font size="19.0" />
                </font>
             </Label>
-            <Label layoutX="32.0" layoutY="60.0" text="USERNAME">
+            <Label layoutX="32.0" layoutY="60.0" text="USERNAME:">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="114.0" prefHeight="28.0" prefWidth="102.0" text="PASSWORD">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="27.0" layoutY="114.0" prefHeight="28.0" prefWidth="102.0" text="PASSWORD:">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Button id="btn_login" fx:id="btn_login" layoutX="117.0" layoutY="192.0" mnemonicParsing="false" onAction="#btnLogin" prefHeight="26.0" prefWidth="83.0" style="-fx-background-color: rgb(76, 74, 69);" text="Login" textFill="WHITE">
+            <Button id="btn_login" fx:id="btn_login" layoutX="14.0" layoutY="183.0" mnemonicParsing="false" onAction="#btnLogin" prefHeight="42.0" prefWidth="102.0" style="-fx-background-color: rgb(76, 74, 69);" text="Login" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+               <font>
+                  <Font size="19.0" />
+               </font>
             </Button>
-            <PasswordField fx:id="psswdtxt" layoutX="142.0" layoutY="115.0" promptText="Password">
+            <PasswordField fx:id="psswdtxt" layoutX="161.0" layoutY="115.0" promptText="Password">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
             </PasswordField>
-            <TextField fx:id="usertxt" layoutX="141.0" layoutY="61.0" prefHeight="26.0" prefWidth="150.0" promptText="Name" />
+            <TextField fx:id="usertxt" layoutX="160.0" layoutY="60.0" prefHeight="26.0" prefWidth="150.0" promptText="Name" />
+            <Label layoutX="135.0" layoutY="191.0" text="OR">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Button id="btn_login" fx:id="btn_delete" layoutX="185.0" layoutY="184.0" mnemonicParsing="false" onAction="#btnDelete" prefHeight="42.0" prefWidth="150.0" style="-fx-background-color: rgb(76, 74, 69);" text="Delete an existing User" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </AnchorPane>
       <ImageView fitHeight="42.0" fitWidth="52.0" layoutX="153.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="595.0">
