--- a/src/main/resources/org/example/users.fxml
+++ b/src/main/resources/org/example/users.fxml
@@ -36,7 +36,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button fx:id="btn_ModUser" layoutX="99.0" layoutY="371.0" mnemonicParsing="false" onAction="#ModifyUser" prefHeight="58.0" prefWidth="219.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify User" textFill="WHITE">
+      <Button fx:id="btn_ModUser" layoutX="99.0" layoutY="371.0" mnemonicParsing="false" onAction="#modifyUser" prefHeight="58.0" prefWidth="219.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify User" textFill="WHITE">
          <font>
             <Font size="27.0" />
          </font>
