--- a/src/main/resources/org/example/addCart.fxml
+++ b/src/main/resources/org/example/addCart.fxml
@@ -9,49 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: rgb(85, 94, 68);" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.AddCartController">
    <children>
-      <TableView fx:id="tableProducts" layoutX="20.0" layoutY="151.0" prefHeight="364.0" prefWidth="380.0">
-         <columns>
-            <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" />
-            <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="75.0" text="Description" />
-            <TableColumn fx:id="stockColumn" prefWidth="75.0" text="Stock" />
-            <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
-         </columns>
-      </TableView>
-      <Label alignment="CENTER" layoutX="93.0" layoutY="43.0" prefHeight="64.0" prefWidth="648.0" style="-fx-background-color: rgb(76, 74, 69);" text="Buy Products" textFill="WHITE">
+      <Label alignment="CENTER" layoutX="83.0" layoutY="29.0" prefHeight="64.0" prefWidth="648.0" style="-fx-background-color: rgb(76, 74, 69);" text="Buy Products" textFill="WHITE">
          <font>
             <Font size="43.0" />
          </font>
       </Label>
-      <TextField layoutX="564.0" layoutY="238.0" />
-      <AnchorPane id="btn_login" layoutX="417.0" layoutY="167.0" prefHeight="331.0" prefWidth="363.0" style="-fx-background-color: rgb(239, 184, 42);">
-         <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="21.0" layoutY="52.0" prefHeight="28.0" prefWidth="128.0" text="Product Name:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Button fx:id="btn_addCart" layoutX="72.0" layoutY="258.0" mnemonicParsing="false" onAction="#addCart" prefHeight="58.0" prefWidth="219.0" style="-fx-background-color: rgb(76, 74, 69);" text="Add to cart" textFill="WHITE">
-               <font>
-                  <Font size="27.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="21.0" layoutY="152.0" prefHeight="28.0" prefWidth="128.0" text="Quantity: ">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <TextField fx:id="TextProduct" layoutX="182.0" layoutY="54.0" promptText="ProductName" />
-            <TextField fx:id="TextQuantity" layoutX="183.0" layoutY="154.0" promptText="Quantity" />
-         </children>
-      </AnchorPane>
-      <Button fx:id="btn_return" layoutX="585.0" layoutY="55.0" mnemonicParsing="false" onAction="#goBack" prefHeight="26.0" prefWidth="107.0" style="-fx-background-color: white;" text="Go back">
+      <Button fx:id="btn_return" layoutX="582.0" layoutY="41.0" mnemonicParsing="false" onAction="#goBack" prefHeight="26.0" prefWidth="107.0" style="-fx-background-color: white;" text="Go back">
          <font>
             <Font size="18.0" />
          </font>
@@ -59,5 +24,38 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
+      <TableView fx:id="tableProducts" layoutX="27.0" layoutY="109.0" prefHeight="252.0" prefWidth="746.0">
+         <columns>
+            <TableColumn fx:id="idColumn" prefWidth="112.80001831054688" text="ID" />
+            <TableColumn fx:id="nameColumn" prefWidth="127.19998168945312" text="Name" />
+            <TableColumn fx:id="descriptionColumn" prefWidth="271.20001220703125" text="Description" />
+            <TableColumn fx:id="stockColumn" prefWidth="99.99993896484375" text="Stock" />
+            <TableColumn fx:id="priceColumn" prefWidth="137.5999755859375" text="Price" />
+         </columns>
+      </TableView>
+      <AnchorPane layoutX="27.0" layoutY="372.0" prefHeight="200.0" prefWidth="746.0" style="-fx-background-color: rgb(239, 184, 42);">
+         <children>
+            <Button fx:id="btn_addCart" layoutX="263.0" layoutY="127.0" mnemonicParsing="false" onAction="#addCart" prefHeight="58.0" prefWidth="219.0" style="-fx-background-color: rgb(76, 74, 69);" text="Add to cart" textFill="WHITE">
+               <font>
+                  <Font size="27.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="393.0" layoutY="54.0" prefHeight="28.0" prefWidth="128.0" text="Quantity: ">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="TextQuantity" layoutX="521.0" layoutY="55.0" promptText="Quantity" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="54.0" prefHeight="28.0" prefWidth="128.0" text="Product Name:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="TextProduct" layoutX="192.0" layoutY="55.0" promptText="ProductName" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
