--- a/src/main/resources/org/example/admin.fxml
+++ b/src/main/resources/org/example/admin.fxml
@@ -44,13 +44,13 @@
             <Font size="43.0" />
          </font>
       </Label>
-      <TableView fx:id="tableProducts" layoutX="227.0" layoutY="133.0" prefHeight="226.0" prefWidth="367.0">
+      <TableView fx:id="tableProducts" layoutX="143.0" layoutY="133.0" prefHeight="226.0" prefWidth="505.0">
          <columns>
             <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" />
             <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="75.0" text="Description" />
-            <TableColumn fx:id="stockColumn" prefWidth="75.0" text="Stock" />
-            <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
+            <TableColumn fx:id="descriptionColumn" prefWidth="171.20001220703125" text="Description" />
+            <TableColumn fx:id="stockColumn" prefWidth="93.5999755859375" text="Stock" />
+            <TableColumn fx:id="priceColumn" prefWidth="91.199951171875" text="Price" />
          </columns></TableView>
       <Button fx:id="modAdmin" layoutX="574.0" layoutY="510.0" mnemonicParsing="false" onAction="#modifyAdmin" prefHeight="51.0" prefWidth="195.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify Admin" textFill="#151515">
          <font>
