--- a/src/main/resources/org/example/addCart.fxml
+++ b/src/main/resources/org/example/addCart.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -57,5 +59,10 @@
             <TextField fx:id="TextProduct" layoutX="192.0" layoutY="55.0" promptText="ProductName" />
          </children>
       </AnchorPane>
+      <ImageView fitHeight="58.0" fitWidth="79.0" layoutX="98.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@foto/addcart.gif" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
