--- a/src/main/resources/org/example/home.fxml
+++ b/src/main/resources/org/example/home.fxml
@@ -53,7 +53,7 @@
       </ImageView>
       <ImageView fitHeight="190.0" fitWidth="223.0" layoutX="128.0" layoutY="227.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@foto/Logo.png" />
+            <Image url="@foto/logo.png" />
          </image>
       </ImageView>
       <Label fx:id="login_txt11" layoutX="409.0" layoutY="445.0" prefHeight="51.0" prefWidth="317.0" style="-fx-background-color: white;" text="Need a Acount?      ">
