--- a/src/main/resources/org/example/admin.fxml
+++ b/src/main/resources/org/example/admin.fxml
@@ -44,14 +44,13 @@
             <Font size="43.0" />
          </font>
       </Label>
-      <TableView fx:id="tableProducts" layoutX="114.0" layoutY="137.0" prefHeight="226.0" prefWidth="582.0">
+      <TableView fx:id="tableProducts" layoutX="120.0" layoutY="136.0" prefHeight="226.0" prefWidth="560.0">
          <columns>
-            <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" />
-            <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="171.20001220703125" text="Description" />
-            <TableColumn fx:id="stockColumn" prefWidth="93.5999755859375" text="Stock" />
-            <TableColumn fx:id="priceColumn" minWidth="0.0" prefWidth="72.79998779296875" text="Price" />
-            <TableColumn fx:id="idadmin" prefWidth="93.5999755859375" text="Admin" />
+            <TableColumn fx:id="idColumn" prefWidth="88.79998779296875" text="ID" />
+            <TableColumn fx:id="nameColumn" prefWidth="107.20001220703125" text="Name" />
+            <TableColumn fx:id="descriptionColumn" prefWidth="166.4000244140625" text="Description" />
+            <TableColumn fx:id="stockColumn" prefWidth="97.5999755859375" text="Stock" />
+            <TableColumn fx:id="priceColumn" minWidth="0.0" prefWidth="100.79998779296875" text="Price" />
          </columns></TableView>
       <Button fx:id="modAdmin" layoutX="574.0" layoutY="510.0" mnemonicParsing="false" onAction="#modifyAdmin" prefHeight="51.0" prefWidth="195.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify Admin" textFill="WHITE">
          <font>
