--- a/src/main/resources/org/example/ShowCart.fxml
+++ b/src/main/resources/org/example/ShowCart.fxml
@@ -28,7 +28,7 @@
       </TableView>
       <AnchorPane layoutX="37.0" layoutY="382.0" prefHeight="200.0" prefWidth="746.0" style="-fx-background-color: rgb(239, 184, 42);">
          <children>
-            <Button fx:id="btn_buy" layoutX="73.0" layoutY="71.0" mnemonicParsing="false" onAction="#BUY" prefHeight="58.0" prefWidth="230.0" style="-fx-background-color: rgb(76, 74, 69);" text="BUY PRODUCTS" textFill="WHITE">
+            <Button fx:id="btn_buy" layoutX="84.0" layoutY="70.0" mnemonicParsing="false" onAction="#BUY" prefHeight="58.0" prefWidth="230.0" style="-fx-background-color: rgb(76, 74, 69);" text="BUY PRODUCTS" textFill="WHITE">
                <font>
                   <Font size="27.0" />
                </font>
@@ -36,7 +36,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="btn_empty" layoutX="429.0" layoutY="71.0" mnemonicParsing="false" onAction="#emptyCart" prefHeight="58.0" prefWidth="230.0" style="-fx-background-color: rgb(76, 74, 69);" text="EMPTY CART" textFill="WHITE">
+            <Button fx:id="btn_tookout" layoutX="420.0" layoutY="71.0" mnemonicParsing="false" onAction="#tookout" prefHeight="58.0" prefWidth="274.0" style="-fx-background-color: rgb(76, 74, 69);" text="Remove from Cart" textFill="WHITE">
                <font>
                   <Font size="27.0" />
                </font>
