--- a/src/main/resources/org/example/users.fxml
+++ b/src/main/resources/org/example/users.fxml
@@ -8,14 +8,6 @@
 
 <AnchorPane fx:id="userlabel" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: rgb(85, 94, 68);" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.userController">
    <children>
-      <Button fx:id="logbutton" layoutX="480.0" layoutY="371.0" mnemonicParsing="false" onAction="#closesesion" prefHeight="58.0" prefWidth="207.0" style="-fx-background-color: rgb(239, 184, 42);" text="Log Out" textFill="WHITE">
-         <font>
-            <Font size="24.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
       <Label fx:id="ulabel" alignment="CENTER" layoutX="118.0" layoutY="55.0" prefHeight="64.0" prefWidth="583.0" style="-fx-background-color: rgb(76, 74, 69);" text="Welcome USER" textFill="WHITE">
          <font>
             <Font size="43.0" />
@@ -39,6 +31,22 @@
       <Button fx:id="btn_ModUser" layoutX="118.0" layoutY="371.0" mnemonicParsing="false" onAction="#modifyUser" prefHeight="58.0" prefWidth="219.0" style="-fx-background-color: rgb(239, 184, 42);" text="Modify User" textFill="WHITE">
          <font>
             <Font size="27.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="logbutton" layoutX="480.0" layoutY="371.0" mnemonicParsing="false" onAction="#closesesion" prefHeight="58.0" prefWidth="207.0" style="-fx-background-color: rgb(239, 184, 42);" text="Log Out" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="purchasebuton" layoutX="290.0" layoutY="498.0" mnemonicParsing="false" onAction="#showprevpurchases" prefHeight="58.0" prefWidth="238.0" style="-fx-background-color: rgb(239, 184, 42);" text="Previous Purchases" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
          </font>
          <cursor>
             <Cursor fx:constant="HAND" />
